--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
 body{
     margin: 0;
     padding: 0;
@@ -5,6 +9,7 @@ body{
 .wind{
     display: flex;
     align-items: center;
+    position: relative;
 }
 .swiper{
     overflow: hidden;
@@ -30,10 +35,48 @@ body{
     height: 100%;
 }
 .mybutton{
-    width: 50px;height: 50px;background-color: red;
+    width: 50px;
+    height: 50px;
+    background-color: red;
     vertical-align: middle;
+
+    position: absolute;
+    left:0;
+    z-index: 1;
+
+    display: none;
 }
 .mybutton2{
-    width: 50px;height: 50px;background-color: blueviolet;
+    width: 50px;
+    height: 50px;
+    background-color: blueviolet;
     vertical-align: middle;
+
+    position: absolute;
+    /*left:650px;*/
+    z-index: 1;
+
+    display: none;
+}
+
+.points{
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+}
+.points .pos{
+    display: flex;
+    align-items: center;
+    border: 1px solid red;
+    /*position: absolute;*/
+    /*left: 50%;*/
+    /*display: inline;*/
+}
+.points .pos .po{
+    width: 20px;
+    height: 20px;
+    border-radius: 15px;
+    margin: 10px;
+    background-color: red;
+
 }
